syntax = "proto3";
package pb;


option go_package = "./pb";

//接口请求入参
message JudgeRequest{
     bytes sourceCode = 1;
     string type = 2;
     int32 problemID = 3;
     int32 userID = 4;
     bool  isUpdate = 5;
}
//接口返回出参
message JudgeResponse{
     string response = 1;
}
//定义接口
service JudgeService{
    //一个简单的rpc
    rpc Judge(JudgeRequest) returns (JudgeResponse){}
}

